force-app/main/default/objects/Account/fields/Account_Casesafe_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Casesafe_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Casesafe ID</label>
    <type>Text</type>
</CustomField>