force-app/main/default/objects/Account/fields/Account_Lookup_Info__c.field-meta.xml
<CustomField>
    <fullName>Account_Lookup_Info__c</fullName>
    <formula>IF( 
    RecordType.DeveloperName  = &apos;Customer&apos;,
      IF(
         NOT(ISBLANK(Parent__c)), Parent__r.Name +&apos; - &apos;+  Parent__r.PersonEmail  , PersonEmail +&apos; - &apos;+ PersonMobilePhone),
     RecordType.Name
)</formula>
    <label>Account Lookup Info</label>
    <type>Text</type>
</CustomField>