force-app/main/default/objects/Account/fields/AccountAutoNum__c.field-meta.xml
<CustomField>
    <fullName>AccountAutoNum__c</fullName>
    <displayFormat>{00000}</displayFormat>
    <label>AccountAutoNum</label>
    <type>AutoNumber</type>
</CustomField>