force-app/main/default/objects/Account/fields/AccountID_Teacher__c.field-meta.xml
<CustomField>
    <fullName>AccountID_Teacher__c</fullName>
    <formula>&apos;E-&apos;+ AccountAutoNum__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountID</label>
    <type>Text</type>
</CustomField>