force-app/main/default/objects/Account/fields/Admin_Fees_Required__c.field-meta.xml
<CustomField>
    <fullName>Admin_Fees_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Admin Fees Required</label>
    <type>Checkbox</type>
</CustomField>