force-app/main/default/objects/Account/fields/Also_a_Student__c.field-meta.xml
<CustomField>
    <fullName>Also_a_Student__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Also a Student</label>
    <type>Checkbox</type>
</CustomField>