force-app/main/default/objects/Account/fields/American_club__c.field-meta.xml
<CustomField>
    <fullName>American_club__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>American club</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.LastName</field>
            <operation>contains</operation>
            <value>American club</value>
        </filterItems>
        <filterItems>
            <field>$Source.Membership_Type__c</field>
            <operation>equals</operation>
            <valueField>Account.Membership_Type__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (American club)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>