force-app/main/default/objects/Account/fields/App_Portal_User__c.field-meta.xml
<CustomField>
    <fullName>App_Portal_User__c</fullName>
    <description>This formula field indicated if the Teacher/Customer is using the Portal or Mobile App</description>
    <formula>IF( ISBLANK(Customer_Password__c), FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>App/Portal User</label>
    <type>Checkbox</type>
</CustomField>