force-app/main/default/objects/Account/fields/Available_Make_up_mins_For_Group__c.field-meta.xml
<CustomField>
    <fullName>Available_Make_up_mins_For_Group__c</fullName>
    <description>This fields show group class remaining mins</description>
    <label>Available Make-up mins For Group</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>