force-app/main/default/objects/Account/fields/Available_Make_up_Units__c.field-meta.xml
<CustomField>
    <fullName>Available_Make_up_Units__c</fullName>
    <label>Available Make-up mins For Individual</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>