force-app/main/default/objects/Account/fields/Bank_Detail__c.field-meta.xml
<CustomField>
    <fullName>Bank_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Detail</label>
    <referenceTo>Bank_Master__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>