force-app/main/default/objects/Account/fields/Booking_Reminded_Notification__c.field-meta.xml
<CustomField>
    <fullName>Booking_Reminded_Notification__c</fullName>
    <defaultValue>true</defaultValue>
    <description>To be used in Mobile App for Booking Reminder Notification</description>
    <label>Booking Reminded Notification</label>
    <type>Checkbox</type>
</CustomField>