force-app/main/default/objects/Account/fields/Card_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Card_Expiry__c</fullName>
    <label>Card Expiry</label>
    <length>10</length>
    <type>Text</type>
</CustomField>