force-app/main/default/objects/Account/fields/Card_Image__c.field-meta.xml
<CustomField>
    <fullName>Card_Image__c</fullName>
    <formula>CASE( 
Card_Type__c , 
&quot;Visa&quot;, IMAGE (&quot;/servlet/servlet.ImageServer?id=0156F00000GwOsI&amp;oid=00D1m0000008aQN&quot;, &quot;Visa&quot;,22,46), 
&quot;American Express&quot;, IMAGE (&quot;/servlet/servlet.ImageServer?id=0156F00000GwOsD&amp;oid=00D1m0000008aQN&quot;, &quot;American Express&quot;,22,46), 
&quot;MasterCard&quot;, IMAGE (&quot;/servlet/servlet.ImageServer?id=0156F00000GwOsF&amp;oid=00D1m0000008aQN&quot;, &quot;MasterCard&quot;,22,46), 
&quot;&quot; 
)</formula>
    <label>Card Image</label>
    <type>Text</type>
</CustomField>