force-app/main/default/objects/Account/fields/Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Card_Number__c</fullName>
    <label>Card Number</label>
    <length>4</length>
    <type>Text</type>
</CustomField>