force-app/main/default/objects/Account/fields/CDAC_Contribution__c.field-meta.xml
<CustomField>
    <fullName>CDAC_Contribution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CDAC Contribution</label>
    <type>Checkbox</type>
</CustomField>