force-app/main/default/objects/Account/fields/Center_Close_Time__c.field-meta.xml
<CustomField>
    <fullName>Center_Close_Time__c</fullName>
    <label>Center Close Time</label>
    <type>Time</type>
</CustomField>