force-app/main/default/objects/Account/fields/Center_Email__c.field-meta.xml
<CustomField>
    <fullName>Center_Email__c</fullName>
    <label>Centre Email</label>
    <type>Email</type>
</CustomField>