force-app/main/default/objects/Account/fields/Center_Open_Time__c.field-meta.xml
<CustomField>
    <fullName>Center_Open_Time__c</fullName>
    <label>Center Open Time</label>
    <type>Time</type>
</CustomField>