force-app/main/default/objects/Account/fields/centerAdmin__c.field-meta.xml
<CustomField>
    <fullName>centerAdmin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>center admin for which task will be assigned by default</description>
    <label>Center Admin</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>