force-app/main/default/objects/Account/fields/Centre_Address_Formula__c.field-meta.xml
<CustomField>
    <fullName>Centre_Address_Formula__c</fullName>
    <formula>Centre_Name__r.BillingStreet &amp; &quot; &quot; &amp; Centre_Name__r.BillingCity &amp; &quot; &quot; &amp; Centre_Name__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Centre Address Formula</label>
    <type>Text</type>
</CustomField>