force-app/main/default/objects/Account/fields/Centre_Email_Formula__c.field-meta.xml
<CustomField>
    <fullName>Centre_Email_Formula__c</fullName>
    <formula>Centre_Name__r.Center_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Centre Email Formula</label>
    <type>Text</type>
</CustomField>