force-app/main/default/objects/Account/fields/Centre_Name__c.field-meta.xml
<CustomField>
    <fullName>Centre_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Update this field when an Active Enrolment is created in the system</description>
    <label>Centre Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Centre</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Centre Name)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>