force-app/main/default/objects/Account/fields/Centre_Phone_Formula__c.field-meta.xml
<CustomField>
    <fullName>Centre_Phone_Formula__c</fullName>
    <formula>Centre_Name__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Centre Phone Formula</label>
    <type>Text</type>
</CustomField>