force-app/main/default/objects/Account/fields/CentreName_Cust__c.field-meta.xml
<CustomField>
    <fullName>CentreName_Cust__c</fullName>
    <label>CentreName Cust</label>
    <length>255</length>
    <type>Text</type>
</CustomField>