force-app/main/default/objects/Account/fields/Chargeover_Cust_ID__c.field-meta.xml
<CustomField>
    <fullName>Chargeover_Cust_ID__c</fullName>
    <externalId>true</externalId>
    <label>Chargeover Cust ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>