force-app/main/default/objects/Account/fields/Contact_Number_1__c.field-meta.xml
<CustomField>
    <fullName>Contact_Number_1__c</fullName>
    <label>Contact Number-1</label>
    <type>Phone</type>
</CustomField>