force-app/main/default/objects/Account/fields/Contact_Number_2__c.field-meta.xml
<CustomField>
    <fullName>Contact_Number_2__c</fullName>
    <label>Contact Number-2</label>
    <type>Phone</type>
</CustomField>