force-app/main/default/objects/Account/fields/Cost_Centre_ID__c.field-meta.xml
<CustomField>
    <fullName>Cost_Centre_ID__c</fullName>
    <label>Cost Centre ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>