force-app/main/default/objects/Account/fields/Country_Code_Pardot__c.field-meta.xml
<CustomField>
    <fullName>Country_Code_Pardot__c</fullName>
    <formula>Centre_Name__r.Country__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country Code(Pardot)</label>
    <type>Text</type>
</CustomField>