force-app/main/default/objects/Account/fields/Current_Engagement_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Engagement_Status__c</fullName>
    <label>Current Engagement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>