force-app/main/default/objects/Account/fields/CustIndicator__c.field-meta.xml
<CustomField>
    <fullName>CustIndicator__c</fullName>
    <description>This formula is basically to represent Parent/Student Images</description>
    <formula>IF( RecordType.DeveloperName = &quot;Customer&quot;,

     IF(
        ISBLANK(Parent__c), 
        IMAGE (&quot;/servlet/servlet.ImageServer?id=0156F00000GwRX8&amp;oid=00D1m0000008aQN&amp;lastMod=1556272366000&quot;,&quot;Parent&quot;),
        IMAGE (&quot;/servlet/servlet.ImageServer?id=0156F00000GwRXN&amp;oid=00D1m0000008aQN&amp;lastMod=1556272415000&quot;, &quot;Student&quot;)),
     
     IF (RecordType.DeveloperName = &quot;Centre&quot;,
        IMAGE (&quot;/servlet/servlet.ImageServer?id=0156F00000GwRVW&amp;oid=00D1m0000008aQN&amp;lastMod=1556271399000&quot;, &quot;Centre&quot;),
   
     IF (RecordType.DeveloperName = &quot;Teacher&quot;,
        IMAGE (&quot;/servlet/servlet.ImageServer?id=0156F00000GwRXS&amp;oid=00D1m0000008aQN&amp;lastMod=1556272445000&quot;, &quot;Teacher&quot;)
,&quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indicator</label>
    <type>Text</type>
</CustomField>