force-app/main/default/objects/Account/fields/Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Customer Email (Backend)</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>