force-app/main/default/objects/Account/fields/Customer_Password__c.field-meta.xml
<CustomField>
    <fullName>Customer_Password__c</fullName>
    <description>Used to capture Portal and Mobile App Password</description>
    <label>Customer Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>