force-app/main/default/objects/Account/fields/Deposit_Balance__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Balance__c</fullName>
    <formula>Total_Deposit_Amount__c - Total_Deposit_Refunded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deposit Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>