force-app/main/default/objects/Account/fields/Disembarkation_Card__c.field-meta.xml
<CustomField>
    <fullName>Disembarkation_Card__c</fullName>
    <label>Disembarkation Card/IMM27I</label>
    <length>20</length>
    <type>Text</type>
</CustomField>