force-app/main/default/objects/Account/fields/Email_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Requested_Date__c</fullName>
    <label>Email Requested Date</label>
    <type>Date</type>
</CustomField>