force-app/main/default/objects/Account/fields/Employee_Code__c.field-meta.xml
<CustomField>
    <fullName>Employee_Code__c</fullName>
    <externalId>true</externalId>
    <label>Employee Code</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>