force-app/main/default/objects/Account/fields/Employee_Duty_Type__c.field-meta.xml
<CustomField>
    <fullName>Employee_Duty_Type__c</fullName>
    <label>Employee Duty Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Duty</fullName>
            </value>
            <value>
                <fullName>Non-Duty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>