force-app/main/default/objects/Account/fields/Employee_Nationality__c.field-meta.xml
<CustomField>
    <fullName>Employee_Nationality__c</fullName>
    <label>Employee Nationality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Nationality</valueSetName>
    </valueSet>
</CustomField>