force-app/main/default/objects/Account/fields/Enable_Trial_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Enable_Trial_Bookings__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For handle trial for the public guest users. Its simply disable the trial booking for the teachers if its false.</description>
    <label>Enable Trial Bookings</label>
    <type>Checkbox</type>
</CustomField>