force-app/main/default/objects/Account/fields/Enroled__c.field-meta.xml
<CustomField>
    <fullName>Enroled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use this field when a customer enrol for the first time</description>
    <label>Enroled</label>
    <type>Checkbox</type>
</CustomField>