force-app/main/default/objects/Account/fields/Enroled_Date__c.field-meta.xml
<CustomField>
    <fullName>Enroled_Date__c</fullName>
    <description>Managed by Workflow
Update this field when Enroled checkbox is checked</description>
    <label>Latest Enrolment Date</label>
    <type>Date</type>
</CustomField>