force-app/main/default/objects/Account/fields/Exit_Type__c.field-meta.xml
<CustomField>
    <fullName>Exit_Type__c</fullName>
    <label>Exit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Termination</fullName>
            </value>
            <value>
                <fullName>Resignation</fullName>
            </value>
            <value>
                <fullName>Non-renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>