force-app/main/default/objects/Account/fields/Expiration__c.field-meta.xml
<CustomField>
    <fullName>Expiration__c</fullName>
    <description>Expiry Month + Expiry Year
01/22</description>
    <formula>IF( ISNULL(Expiry_Month__c) ,&quot;&quot;,

CASE( Expiry_Month__c , 
1,&quot;01&quot;,
2,&quot;02&quot;,
3,&quot;03&quot;,
4,&quot;04&quot;,
5,&quot;05&quot;,
6,&quot;06&quot;,
7,&quot;07&quot;,
8,&quot;08&quot;,
9,&quot;09&quot;,
10,&quot;10&quot;,
11,&quot;11&quot;,
12,&quot;12&quot;,
&quot;&quot;) 
&amp; &quot;/&quot; &amp;
 RIGHT(TEXT(Expiry_Year__c),2)
)</formula>
    <label>Expiration</label>
    <type>Text</type>
</CustomField>