force-app/main/default/objects/Account/fields/Expiry_Month__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Month__c</fullName>
    <description>Integrated with Stripe (via Site Page and Mobile App)</description>
    <label>Expiry Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>