force-app/main/default/objects/Account/fields/Expiry_Year__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Year__c</fullName>
    <description>Integrated with Stripe (via Site Page and Mobile App)</description>
    <label>Expiry Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>