force-app/main/default/objects/Account/fields/FCM_Token__c.field-meta.xml
<CustomField>
    <fullName>FCM_Token__c</fullName>
    <label>FCM Token</label>
    <type>TextArea</type>
</CustomField>