force-app/main/default/objects/Account/fields/Food_Allergy__c.field-meta.xml
<CustomField>
    <fullName>Food_Allergy__c</fullName>
    <description>this field use in camp class for the camp enrolment process teacher need to know if there are any food allergies for the students</description>
    <label>Food Allergy (If any)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>