force-app/main/default/objects/Account/fields/Group_Commission__c.field-meta.xml
<CustomField>
    <fullName>Group_Commission__c</fullName>
    <label>Group Commission %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>