force-app/main/default/objects/Account/fields/ID_Location__c.field-meta.xml
<CustomField>
    <fullName>ID_Location__c</fullName>
    <label>ID Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Singapore</fullName>
            </value>
            <value>
                <fullName>Hong Kong</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>