force-app/main/default/objects/Account/fields/ID_Type__c.field-meta.xml
<CustomField>
    <fullName>ID_Type__c</fullName>
    <label>ID Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Foreigner</fullName>
            </value>
            <value>
                <fullName>Permanent Resident</fullName>
            </value>
            <value>
                <fullName>Citizen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>