force-app/main/default/objects/Account/fields/Individual_Commission__c.field-meta.xml
<CustomField>
    <fullName>Individual_Commission__c</fullName>
    <label>Individual Commission %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>