force-app/main/default/objects/Account/fields/Instrument_at_Home__c.field-meta.xml
<CustomField>
    <fullName>Instrument_at_Home__c</fullName>
    <label>Instrument at Home</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>