force-app/main/default/objects/Account/fields/Insurance__c.field-meta.xml
<CustomField>
    <fullName>Insurance__c</fullName>
    <label>Insurance</label>
    <length>100</length>
    <type>Text</type>
</CustomField>