force-app/main/default/objects/Account/fields/International_School__c.field-meta.xml
<CustomField>
    <fullName>International_School__c</fullName>
    <defaultValue>false</defaultValue>
    <label>International School</label>
    <type>Checkbox</type>
</CustomField>