force-app/main/default/objects/Account/fields/Invoice_Paid_Notification__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Paid_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in Mobile Notification settings
Send this notification only if this field is checked</description>
    <label>Invoice Paid Notification</label>
    <type>Checkbox</type>
</CustomField>