force-app/main/default/objects/Account/fields/Is_Club_Member__c.field-meta.xml
<CustomField>
    <fullName>Is_Club_Member__c</fullName>
    <formula>NOT(ISBLANK(Membership_Number__c)  || ISBLANK(TEXT(Membership_Type__c)) || ISBLANK(American_club__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Club Member</label>
    <type>Checkbox</type>
</CustomField>